--- a/rock-paper-scissors-master/index.html
+++ b/rock-paper-scissors-master/index.html
@@ -42,7 +42,9 @@
             </div>
         </div>
         <div class="container__board">
-            <!-- in progress... -->
+            <div class="container__board__circle circle-blue"><img src="images/icon-paper.svg" alt="icon paper" class="icon paper"></div>
+            <div class="container__board__circle circle-yellow"><img src="images/icon-scissors.svg" alt="icon scissors" class="icon scissors"></div>
+            <div class="container__board__circle circle-red"><img src="images/icon-rock.svg" alt="icon rock" class="icon rock"></div>
         </div>
         <div class="container__rules">
             <button class="rules">
