--- a/rock-paper-scissors-master/index.html
+++ b/rock-paper-scissors-master/index.html
@@ -4,26 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/@popperjs/core@2">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <style>
 
-    </style>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-block">
         <div class="container__scores">
             <div class="container__scores__left-side">
-                <h1 class="rock">
+                <h1 class="rock m-0 fw-bold">
                     Rock
                 </h1>
-                <h1 class="rock">
+                <h1 class="paper m-0 fw-bold">
                     Paper
                 </h1>
-                <h1 class="rock">
+                <h1 class="scissor m-0 fw-bold">
                     Scissors
                 </h1>
             </div>
@@ -47,9 +47,24 @@
             <div class="container__board__circle circle-red"><img src="images/icon-rock.svg" alt="icon rock" class="icon rock"></div>
         </div>
         <div class="container__rules">
-            <button class="rules">
+            <button class="rules" data-bs-toggle="modal" data-bs-target="#loadRules">
                 <a href="#">Rules</a>
             </button>
+            <div class="modal fade " id="loadRules" data-bs-backdrop="static">
+                <div class="modal-dialog modal-dialog-centered text-center">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3 class="modal-title fw-bold">
+                                rules
+                            </h3>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"><img src="images/icon-close.svg" alt=""></button>
+                        </div>
+                        <div class="modal-body">
+                            <img src="images/image-rules.svg" alt="rules">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -58,8 +73,11 @@
 
 
     <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/Samuel-Marien" target="_blank">Samuel Marien</a>.
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
