--- a/rock-paper-scissors-master/index.html
+++ b/rock-paper-scissors-master/index.html
@@ -42,12 +42,13 @@
 
             </div>
         </div>
+        <!-- step 1 -->
         <div class="container__board__step-1">
             <div class="container__board__circle circle-blue"><img src="images/icon-paper.svg" alt="icon paper" class="icon paper"></div>
             <div class="container__board__circle circle-yellow"><img src="images/icon-scissors.svg" alt="icon scissors" class="icon scissors"></div>
             <div class="container__board__circle circle-red"><img src="images/icon-rock.svg" alt="icon rock" class="icon rock"></div>
         </div>
-
+        <!-- step 2 -->
         <div class="container__board__step-2">
             <div class="container__board__step-2__block">
                 <div class="container__user">
@@ -65,6 +66,19 @@
                             <div class="container__user__picked__choice circle-red2"><img src="images/icon-rock.svg" alt="icon rock" class="icon2 icon-rock2"></div>
                         </div>
                     </div>
+                </div>
+
+                <div class="container__board__step-2__block__result text-center">
+                    <h3 class="container__board__step-2__block__result__win h1 text-white fw-bolder">
+                        you win
+                    </h3>
+                    <h3 class="container__board__step-2__block__result__loose h1 text-white fw-bolder">
+                        you lose
+                    </h3>
+                    <h3 class="container__board__step-2__block__result__equal h1 text-white fw-bolder">
+                        equality
+                    </h3>
+                    <button class="btn btn-light text-danger w-100">Play again</button>
                 </div>
 
                 <div class="container__home">
