--- a/static-job-listings-master/index.html
+++ b/static-job-listings-master/index.html
@@ -26,9 +26,6 @@
                 <div class="carousel-item">
                     <img src="images/startup-593341_1280_cut.png" class="d-block w-100" alt="startup">
                 </div>
-                <div class="carousel-item">
-                    <img src="images/work-731198_1280_cut.png" class="d-block w-100" alt="work">
-                </div>
             </div>
         </div>
     </header>
@@ -37,7 +34,7 @@
     <nav class="navbar navbar-dark bg-dark navbar-expand-md py-3">
         <div class="container px-5">
             <div class="navbar-brand fw-bolder">
-                Your next talent
+                Afpa'Lumni
             </div>
             <form class="d-flex">
                 <input class="form-control me-1" type="search" placeholder="React, Django..." aria-label="Search">
@@ -104,123 +101,135 @@
             </div>
         </div>
     </nav>
-    <div class="container bg-light">
-        <!-- Item Start -->
-        Photosnap New! Featured Senior Frontend Developer 1d ago Full Time USA only
-        <!-- Role -->
-        Frontend
-        <!-- Level -->
-        Senior
-        <!-- Languages -->
-        HTML CSS JavaScript
-        <!-- Item End -->
 
-        <!-- Item Start -->
-        Manage New! Featured Fullstack Developer 1d ago Part Time Remote
-        <!-- Role -->
-        Fullstack
-        <!-- Level -->
-        Midweight
-        <!-- Languages -->
-        Python
-        <!-- Tools -->
-        React
-        <!-- Item End -->
+    <!-- main -->
+    <main class="container bg-light">
+        <div class="container main__itemsSelectedBar  bg-primary w-75  mb-5 shadow bg-white">
+            <div class="container d-flex justify-content-end">
+                <button class="main__itemsSelectedBar__clear-button shadow-sm btn btn-sm btn-outline-info mt-5 mb-3" type="reset" value="Reset">Clear</button>
+            </div>
 
-        <!-- Item Start -->
-        Account New! Junior Frontend Developer 2d ago Part Time USA only
-        <!-- Role -->
-        Frontend
-        <!-- Level -->
-        Junior
-        <!-- Languages -->
-        JavaScript
-        <!-- Tools -->
-        React Sass
-        <!-- Item End -->
+        </div>
 
-        <!-- Item Start -->
-        MyHome Junior Frontend Developer 5d ago Contract USA only
-        <!-- Role -->
-        Frontend
-        <!-- Level -->
-        Junior
-        <!-- Languages -->
-        CSS JavaScript
-        <!-- Item End -->
+        <div class="container bg-light w-75">
+            <!-- Item Start -->
+            Photosnap New! Featured Senior Frontend Developer 1d ago Full Time USA only
+            <!-- Role -->
+            Frontend
+            <!-- Level -->
+            Senior
+            <!-- Languages -->
+            HTML CSS JavaScript
+            <!-- Item End -->
 
-        <!-- Item Start -->
-        Loop Studios Software Engineer 1w ago Full Time Worldwide
-        <!-- Role -->
-        Fullstack
-        <!-- Level -->
-        Midweight
-        <!-- Languages -->
-        JavaScript Ruby
-        <!-- Tools -->
-        Sass
-        <!-- Item End -->
+            <!-- Item Start -->
+            Manage New! Featured Fullstack Developer 1d ago Part Time Remote
+            <!-- Role -->
+            Fullstack
+            <!-- Level -->
+            Midweight
+            <!-- Languages -->
+            Python
+            <!-- Tools -->
+            React
+            <!-- Item End -->
 
-        <!-- Item Start -->
-        FaceIt Junior Backend Developer 2w ago Full Time UK only
-        <!-- Role -->
-        Backend
-        <!-- Level -->
-        Junior
-        <!-- Languages -->
-        Ruby
-        <!-- Tools -->
-        RoR
-        <!-- Item End -->
+            <!-- Item Start -->
+            Account New! Junior Frontend Developer 2d ago Part Time USA only
+            <!-- Role -->
+            Frontend
+            <!-- Level -->
+            Junior
+            <!-- Languages -->
+            JavaScript
+            <!-- Tools -->
+            React Sass
+            <!-- Item End -->
 
-        <!-- Item Start -->
-        Shortly Junior Developer 2w ago Full Time Worldwide
-        <!-- Role -->
-        Frontend
-        <!-- Level -->
-        Junior
-        <!-- Languages -->
-        HTML JavaScript
-        <!-- Tools -->
-        Sass
-        <!-- Item End -->
+            <!-- Item Start -->
+            MyHome Junior Frontend Developer 5d ago Contract USA only
+            <!-- Role -->
+            Frontend
+            <!-- Level -->
+            Junior
+            <!-- Languages -->
+            CSS JavaScript
+            <!-- Item End -->
 
-        <!-- Item Start -->
-        Insure Junior Frontend Developer 2w ago Full Time USA only
-        <!-- Role -->
-        Frontend
-        <!-- Level -->
-        Junior
-        <!-- Languages -->
-        JavaScript
-        <!-- Tools -->
-        Vue Sass
-        <!-- Item End -->
+            <!-- Item Start -->
+            Loop Studios Software Engineer 1w ago Full Time Worldwide
+            <!-- Role -->
+            Fullstack
+            <!-- Level -->
+            Midweight
+            <!-- Languages -->
+            JavaScript Ruby
+            <!-- Tools -->
+            Sass
+            <!-- Item End -->
 
-        <!-- Item Start -->
-        Eyecam Co. Full Stack Engineer 3w ago Full Time Worldwide
-        <!-- Role -->
-        Fullstack
-        <!-- Level -->
-        Midweight
-        <!-- Languages -->
-        JavaScript Python
-        <!-- Tools -->
-        Django
-        <!-- Item End -->
+            <!-- Item Start -->
+            FaceIt Junior Backend Developer 2w ago Full Time UK only
+            <!-- Role -->
+            Backend
+            <!-- Level -->
+            Junior
+            <!-- Languages -->
+            Ruby
+            <!-- Tools -->
+            RoR
+            <!-- Item End -->
 
-        <!-- Item Start -->
-        The Air Filter Company Front-end Dev 1mo ago Part Time Worldwide
-        <!-- Role -->
-        Frontend
-        <!-- Level -->
-        Junior
-        <!-- Languages -->
-        JavaScript
-        <!-- Tools -->
-        React Sass
-        <!-- Item End -->
-    </div>
+            <!-- Item Start -->
+            Shortly Junior Developer 2w ago Full Time Worldwide
+            <!-- Role -->
+            Frontend
+            <!-- Level -->
+            Junior
+            <!-- Languages -->
+            HTML JavaScript
+            <!-- Tools -->
+            Sass
+            <!-- Item End -->
+
+            <!-- Item Start -->
+            Insure Junior Frontend Developer 2w ago Full Time USA only
+            <!-- Role -->
+            Frontend
+            <!-- Level -->
+            Junior
+            <!-- Languages -->
+            JavaScript
+            <!-- Tools -->
+            Vue Sass
+            <!-- Item End -->
+
+            <!-- Item Start -->
+            Eyecam Co. Full Stack Engineer 3w ago Full Time Worldwide
+            <!-- Role -->
+            Fullstack
+            <!-- Level -->
+            Midweight
+            <!-- Languages -->
+            JavaScript Python
+            <!-- Tools -->
+            Django
+            <!-- Item End -->
+
+            <!-- Item Start -->
+            The Air Filter Company Front-end Dev 1mo ago Part Time Worldwide
+            <!-- Role -->
+            Frontend
+            <!-- Level -->
+            Junior
+            <!-- Languages -->
+            JavaScript
+            <!-- Tools -->
+            React Sass
+            <!-- Item End -->
+        </div>
+    </main>
+
 
 
 
